test/errors/expr_parenthesized_star_value.py
a = [1]
value = (*a)
