test/errors/expr_parenthesized_star_value.py.expected
test/errors/expr_parenthesized_star_value.py:2 error: starred expression not allowed here
